infraestructure-terraform/deployment/terraform/modules/security/main.tf
resource "aws_security_group" "alb" {
  name        = "wallet-alb-sg"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "ecs" {
  name        = "wallet-ecs-task-sg"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 8080 # Puerto nativo de nuestra app Spring WebFlux
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
